# pixa-vault

./: Cargo.toml  LICENSE  README.md  README.npm.md  build.sh  package.json
pkg/: pixa_vault.d.ts  pixa_vault.js  pixa_vault_bg.wasm  pixa_vault_bg.wasm.d.ts  pq-secure-vault.d.ts  pq-secure-vault.js
src/: cipher.rs  config.toml  error.rs  kdf.rs  lib.rs  vault.rs  verify.rs
